--- a/pom.xml
+++ b/pom.xml
@@ -90,4 +90,11 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>jfrog-releases</id>
+      <url>http://localhost:8082/artifactory/libs-release-local</url>
+    </repository>
+  </distributionManagement>
 </project>
+
